--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html style="height:100%; margin: 0; overflow:hidden;" >
+<html>
     <head>
+        <title>Tetris</title>
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-        <script src="js/app.js?v=1"></script>
+        <link href="./assets/site.css" rel="stylesheet">
+        <script src="./app/tetris.jsx" async></script>
     </head>
-    <body style="height:100%;margin:0;overflow:hidden;text-align:center;background-color:#22175b;" >
-        <div id="root" style="height:100%;" />
-        <script src="app/tetris.js"></script>
+    <body>
+        <div id="root"/>
     </body>
 </html>
